--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -2,9 +2,41 @@
 {% load static %}
 {% block title %}Authentication{% endblock title %}
 {% block content %}
-    <div class="card">
-        <div class="card-body">
-            <h1>Register</h1>
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <div class="card mt-5">
+                <div class="card-body">
+                    <div class="card-title text-center">
+                        <h4>Register for a free account</h4>
+                    </div>
+                    <form action="" method="POST">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="username-field" class="form-label">User Name</label>
+                            <input type="text" class="form-control" id="username-field" name="username" placeholder="Enter username">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email-field" class="form-label">Email Address</label>
+                            <input type="email" name="email" class="form-control" id="email-field" aria-describedby="email-help" placeholder="Enter email">
+                            <div id="email-help" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>
+                        <div class="row g-3 align-items-center">
+                                <label for="password-field">Password</label>
+                            <div class="col-10">
+                                <input type="password" id="password-field" class="form-control" name="password" aria-describedby="password-help-inline">
+                            </div>
+                            <div class="col-2">
+                                <span id="password-help-inline" class="form-text">Show</span>
+                            </div>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <button type="submit" class="btn btn-primary mt-3">Register</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
+        <div class="col-md-4"></div>
     </div>
 {% endblock content %}
