--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -42,5 +42,5 @@
         </div>
         <div class="col-md-4"></div>
     </div>
-    <script src="{% static 'js/register.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/register.js' %}"></script>
 {% endblock content %}
