--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -15,14 +15,15 @@
                         <div class="mb-3">
                             <label for="username-field" class="form-label">User Name</label>
                             <input type="text" class="form-control" id="username-field" name="username" placeholder="Enter username">
-                        </div>
-                        <div class="invalid-feedback" style="display: none">
-                            Please provide a valid city.
+                            <div class="username-valid-feedback valid-feedback" style="display: none"></div>
+                            <div class="username-invalid-feedback invalid-feedback" style="display: none"></div>
                         </div>
                         <div class="mb-3">
                             <label for="email-field" class="form-label">Email Address</label>
+                            <div id="email-help" class="form-text mb-2">We'll never share your email with anyone else.</div>
                             <input type="email" name="email" class="form-control" id="email-field" aria-describedby="email-help" placeholder="Enter email">
-                            <div id="email-help" class="form-text">We'll never share your email with anyone else.</div>
+                            <div class="email-valid-feedback valid-feedback" style="display: none"></div>
+                            <div class="email-invalid-feedback invalid-feedback" style="display: none"></div>
                         </div>
                         <div class="row g-3 align-items-center">
                                 <label for="password-field">Password</label>
