--- a/templates/authentication/register_email.html
+++ b/templates/authentication/register_email.html
@@ -242,21 +242,33 @@
 														<td class="v-container-padding-padding"
 															style="overflow-wrap:break-word;word-break:break-word;padding:60px 60px 30px;font-family:'Open Sans',sans-serif;"
 															align="left">
-															<div style="color: #ffffff; line-height: 140%; word-wrap: break-word; margin-bottom: 50px;">Chào em, anh đứng đây từ chiều. Ấy, ông nào đưa nhầm kịch bản rồi, ... Lại nhé!</div>
+															<div
+																style="color: #ffffff; line-height: 140%; word-wrap: break-word; margin-bottom: 50px;">
+																Chào em, anh đứng đây từ chiều. Ấy, ông nào đưa nhầm
+																kịch bản rồi, ... Lại nhé!</div>
 															<div
 																style="color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word;">
 																<p style="font-size: 14px; line-height: 140%;">Dear
 																	<span
-																style="margin: 0px; color: #ff8900; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 16px;">
-																<strong>{{username}}</strong></span>,</p>
+																		style="margin: 0px; color: #ff8900; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 16px;">
+																		<strong>{{username}}</strong></span>,</p>
 																<p style="font-size: 14px; line-height: 140%;"> </p>
 																<p style="font-size: 14px; line-height: 140%;"><span
-																		style="font-size: 16px; line-height: 22.4px;"><strong>We
+																		style="font-size: 16px; line-height: 22.4px; color: #ffffff;"><strong>
 																			Wish you a Happy New Year!</strong></span>
 																</p>
 																<p style="font-size: 14px; line-height: 140%;"> </p>
 																<p style="font-size: 14px; line-height: 140%;"><span
-																		style="font-size: 14px; line-height: 19.6px; color: #ced4d9;"> The year 2022 is now over and we have officially stepped into a new year, 2023. While nothing much changes in terms of the bigger things in our lives but still, a New Year symbolizes hope, positivity, and new beginnings. And so, there is a festive spirit and cheerful mood in the air. People are joyous; they spend time with their loved ones and look forward to a great year ahead.</span>
+																		style="font-size: 14px; line-height: 19.6px; color: #ced4d9;"> The
+																		year 2022 is now over and we have officially
+																		stepped into a new year, 2023. While nothing
+																		much changes in terms of the bigger things in
+																		our lives but still, a New Year symbolizes hope,
+																		positivity, and new beginnings. And so, there is
+																		a festive spirit and cheerful mood in the air.
+																		People are joyous; they spend time with their
+																		loved ones and look forward to a great year
+																		ahead.</span>
 																</p>
 															</div>
 
@@ -295,16 +307,26 @@
 																style="color: #ffffff; line-height: 150%; text-align: center; word-wrap: break-word;">
 																<p style="font-size: 14px; line-height: 150%;">
 																	<span
-																		style="color: #ced4d9; font-size: 14px; line-height: 21px;"> 1. Wishing you all a very happy New Year! May your 2023 be filled with love and happiness.</span>
-																	</p>
+																		style="color: #ced4d9; font-size: 14px; line-height: 21px;"> 1.
+																		Wishing you all a very happy New Year! May your
+																		2023 be filled with love and happiness.</span>
+																</p>
 																<p style="font-size: 14px; line-height: 150%;">
 																	<span
-																		style="color: #ced4d9; font-size: 14px; line-height: 21px;"> 2.Here’s to a new year that is full of happiness and unforgettable memories! Wish you a very happy new year!</span>
-																	</p>
+																		style="color: #ced4d9; font-size: 14px; line-height: 21px;"> 2.
+																		Here’s
+																		to a new year that is full of happiness and
+																		unforgettable memories! Wish you a very happy
+																		new year!</span>
+																</p>
 																<p style="font-size: 14px; line-height: 150%;">
 																	<span
-																		style="color: #ced4d9; font-size: 14px; line-height: 21px;"> 3. A new year reminds you that no matter what happened in the past, you now have a whole new calendar to fill it with newer memories. Happy New Year! </span>
-																	</p>
+																		style="color: #ced4d9; font-size: 14px; line-height: 21px;"> 3.
+																		A new year reminds you that no matter what
+																		happened in the past, you now have a whole new
+																		calendar to fill it with newer memories. Happy
+																		New Year! </span>
+																</p>
 															</div>
 
 														</td>
@@ -351,19 +373,16 @@
 
 															<div
 																style="color: #ffffff; line-height: 150%; text-align: center; word-wrap: break-word;">
-																<p style="font-size: 14px; line-height: 150%;">Our Best
-																	Wishes to 
+																<p style="font-size: 14px; line-height: 150%;"> Best
+																	Wishes to
 																	<span
-																style="margin: 0px; color: #ff8900; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 15px;">
-																<strong>{{username}}</strong></span>
+																		style="margin: 0px; color: #ff8900; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: 'Open Sans',sans-serif; font-size: 15px;">
+																		<strong>{{username}}</strong></span>
 																	in the New Year.</p>
 																<p style="font-size: 14px; line-height: 150%;"> </p>
-																<p style="font-size: 14px; line-height: 150%;">Martha
-																	John</p>
-																<p style="font-size: 14px; line-height: 150%;">Director
+																<p style="font-size: 14px; line-height: 150%;">Director: Hai </p>
+																<p style="font-size: 14px; line-height: 150%;">Giám đốc công ty TNHH một thành viên :)))
 																</p>
-																<p style="font-size: 14px; line-height: 170%;"> </p>
-																<p style="font-size: 14px; line-height: 170%;">Đừng buồn nữa, trầm cảm lên =))))</p>
 															</div>
 
 														</td>
@@ -519,11 +538,11 @@
 														<td class="v-container-padding-padding"
 															style="overflow-wrap:break-word;word-break:break-word;padding:10px 100px 30px;font-family:'Open Sans',sans-serif;"
 															align="left">
-
 															<div
 																style="line-height: 170%; text-align: center; word-wrap: break-word;">
 																<p style="font-size: 14px; line-height: 170%;">
-																	UNSUBSCRIBE | PRIVACY POLICY | WEB</p>
+																	Một nụ cười bằng mười thang thuốc bổ. Tặng {{username}} mười thang thuốc bổ nhé :D</p>
+															</div>
 														</td>
 													</tr>
 												</tbody>
@@ -540,7 +559,63 @@
 						</div>
 					</div>
 
+					<div class="u-row-container" style="padding: 0px;background-color: #ecf0f1">
+						<div class="u-row"
+							style="Margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: transparent;">
+							<div
+								style="border-collapse: collapse;display: table;width: 100%;height: 100%;background-color: transparent;">
+								<!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 0px;background-color: #ecf0f1;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px;"><tr style="background-color: transparent;"><![endif]-->
 
+								<!--[if (mso)|(IE)]><td align="center" width="600" style="width: 600px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;" valign="top"><![endif]-->
+								<div class="u-col u-col-100"
+									style="max-width: 320px;min-width: 600px;display: table-cell;vertical-align: top;">
+									<div
+										style="height: 100%;width: 100% !important;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;">
+										<!--[if (!mso)&(!IE)]><!-->
+										<div
+											style="height: 100%; padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;">
+											<!--<![endif]-->
+
+											<table style="font-family:'Open Sans',sans-serif;" role="presentation"
+												cellpadding="0" cellspacing="0" width="100%" border="0">
+												<tbody>
+													<tr>
+														<td class="v-container-padding-padding"
+															style="overflow-wrap:break-word;word-break:break-word;padding:20px 10px;font-family:'Open Sans',sans-serif;"
+															align="left">
+
+															<table width="100%" cellpadding="0" cellspacing="0"
+																border="0">
+																<tr>
+																	<td style="padding-right: 0px;padding-left: 0px;"
+																		align="center">
+
+																		<img align="center" border="0"
+																			src="https://scontent.fhan2-5.fna.fbcdn.net/v/t1.6435-9/84836742_502519597315294_298079174248103936_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=0Cr_-JFmBnwAX-wAMRF&tn=Z61hjN8s_70utLy_&_nc_ht=scontent.fhan2-5.fna&oh=00_AfC5m1x265ND9yl-E03zZdbTAQ610OP4xQQA-4pAhfoGng&oe=63DB0822"
+																			alt="image" title="image"
+																			style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 149px;"
+																			width="149"
+																			class="v-src-width v-src-max-width" />
+
+																	</td>
+																</tr>
+															</table>
+
+														</td>
+													</tr>
+												</tbody>
+											</table>
+
+											<!--[if (!mso)&(!IE)]><!-->
+										</div>
+										<!--<![endif]-->
+									</div>
+								</div>
+								<!--[if (mso)|(IE)]></td><![endif]-->
+								<!--[if (mso)|(IE)]></tr></table></td></tr></table><![endif]-->
+							</div>
+						</div>
+					</div>
 					<!--[if (mso)|(IE)]></td></tr></table><![endif]-->
 				</td>
 			</tr>
