change customer's name fontsize

--- a/templates/authentication/register_email_vi.html
+++ b/templates/authentication/register_email_vi.html
@@ -526,7 +526,7 @@
 															<div
 																style="line-height: 170%; text-align: center; word-wrap: break-word;">
 																<p style="font-size: 14px; line-height: 170%;">
-																	Một nụ cười bằng mười thang thuốc bổ. Cửa hàng tặng {{username}} mười thang thuốc bổ nhé :D</p>
+																	Một nụ cười bằng mười thang thuốc bổ. Cửa hàng tặng <strong style="font-size: 17px;">{{username}}</strong> mười thang thuốc bổ nhé :D</p>
 															</div>
 														</td>
 													</tr>
